public/style.css
body {
	margin: 0;
	text-align: center;
	overflow-y: scroll;
}
#background {
	width: 100%;
	height: 100%;
	position: fixed;
	left: 0px;
	top: 0px;
	z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
}

.stretch {
	width: 100%;
	height: 100%;
}
#parallax {
	z-index: -1;
	position: fixed;
	top: 0;
	margin-top: 0;
	width: 100%;
	height: 100vh;
	background-image: url(./images/cloud_PNG24.png),
		url(./images/Soft_Cloud_PNG_Clip_Art_Image.png),
		url(./images/purepng.com-cloudnaturecloudsmoke-9615246757368kjiz.png),
		url(./images/1-14969_clouds-realistic-cloud-clouds-png.png);
	background-position: 40% 100%, 60% 100%, 30% 120%, 70% 120%;
	background-repeat: no-repeat;
	background-size: 800px, 800px, 600px, 600px;
}

header {
	font-family: "Bungee Hairline", cursive;
	color: rgb(0, 0, 0);
}
header > * {
	margin: -1%;
}

.filter,
.filter > button {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	justify-content: center;
	font-family: "Quantico", sans-serif;
}
.filter > button,
li {
	list-style-type: none;
	display: inline;
	font-size: 1.1rem;
	color: rgb(44, 44, 44);
	padding: 0.25em;
	border-radius: 0.5em;
	background-color: grey;
	cursor: pointer;
}

li:nth-child(1) {
	background-color: transparent;
}

.projects {
	display: flex;
	justify-content: space-around;
	flex-wrap: wrap;
}
.project {
	margin-bottom: 2%;
	flex-basis: 43%;
	font-family: "Bungee Hairline", cursive;
	line-height: 120%;
}

.preview {
	width: 100%;
	border-radius: 5%;
}

/* filter buttons */

.selected {
	background: linear-gradient(#313c62, #434e74);
	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23314b;
	color: #000000;
	text-shadow: 0 1px #1b2839;
}
.unselected {
	background: linear-gradient(#7ba4ca, #5886ab);
	border: 1px solid #344a7a;
	color: #000000;
	text-shadow: 0 1px #8398db;
	box-shadow: inset 0 1px 1px 0 #a1a5dd, 0 2px 0 -1px rgba(0, 0, 0, 0.2);
	cursor: pointer;
}
.unselected:hover {
	background: linear-gradient(#655ea8, #49508e);
	border: 1px solid #484186;
	color: #000000;
	text-shadow: 0 1px #5958b0;
	box-shadow: 0 2px 0 -1px rgba(0, 0, 0, 0.2);
}
.unselected:active {
	background: linear-gradient(#313c62, #434e74);
	box-shadow: inset 0 0 #3d3361, inset 0 2px 9px 1px #23244b;
	color: #000000;
	text-shadow: 0 1px #1b2039;
}

/* preview fade-in/out */
.project {
	animation: fadeIn ease 2s;
	-webkit-animation: fadeIn ease 2s;
	-moz-animation: fadeIn ease 2s;
	-o-animation: fadeIn ease 2s;
	-ms-animation: fadeIn ease 2s;
}
@keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-moz-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-webkit-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-o-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@-ms-keyframes fadeIn {
	0% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

.title {
	display: flex;
	justify-content: center;
	align-items: center;
}

.github {
	width: 5%;
	margin-left: 5%;
}
.github > img {
	width: 100%;
}

